Actualizaciones varias asociadas a las nuevas vistas y al control del evento tap

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/goles.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/goles.html
@@ -11,11 +11,10 @@
 		
 		
 		<script type="text/javascript">		
-			var myScroll = new IScroll('#wrapper', {tap: true});
+			var myScroll = new IScroll('#wrapper');
 			myScroll.on('beforeScrollStart', function () { 
 				this.refresh();	
-				e.preventDefault();	
-			});					
+				});					
 		</script>
 		
 		<script type="text/javascript" src="js/goles.js"></script>  
