--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/noticias.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/noticias.html
@@ -19,13 +19,13 @@
 		
 		
 		<script type="text/javascript">		
-			var myScroll = new IScroll('#wrapper', {tap: true});
-			myScroll.on('beforeScrollStart', function (e) { 
+			var myScroll = new IScroll('#wrapper');
+			myScroll.on('beforeScrollStart', function () { 
 				this.refresh();		
 			});	
 
 			var myScroll2 = new IScroll('#wrapper2');
-			myScroll2.on('beforeScrollStart', function (e) { 
+			myScroll2.on('beforeScrollStart', function () { 
 				this.refresh();			
 			});
 		</script>
