--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/calendario.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/calendario.html
@@ -2,9 +2,9 @@
 <html lang="es">
 	<body>
 		
-		<div class="container" style="position: absolute; top:45px; left:0; line-height:45px; z-index: 2; width: 100%; height: 45px; font-size: 1.6em; background: red; ">
+		<div class="container calendario-menu" >
 			<div class="row" >			
-				 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 calendar" data-function="_fRenderCalendar();" style="text-align: center; line-height:40px; padding:5px; color: blue;">
+				 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 calendar active" data-function="_fRenderCalendar();" style="text-align: center; line-height:40px; padding:5px; ">
 				 	<span class="glyphicon glyphicon-calendar"></span>
 				 </div>			
 				 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 calendar" data-function="_fRenderCountry();" style="text-align: center; line-height:40px; padding:5px;">
@@ -35,7 +35,7 @@
 		
 		
 		<script type="text/javascript">		
-			var myScroll = new IScroll('#wrapper', {tap: true});
+			var myScroll = new IScroll('#wrapper');
 			myScroll.on('beforeScrollStart', function () {					
 				this.refresh();	
 			});
