Validaciones varias del menu, calendario, contenido estatico...

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
@@ -9,12 +9,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">	
-		<link rel="stylesheet" href="css/bootstrap.min.css">			
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="fonts/iconvault/iconvault-preview.css">				
 		<link rel="stylesheet" href="css/transition.css">
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	
-	<body style="position: fixed;">
+	<body class="content-init" style="position: fixed;">
 	
 		<header>
 			<div class="container">
@@ -24,7 +25,7 @@
 						<span class="glyphicon glyphicon-align-justify"></span>
 					</div>
 
-					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 title" style="text-align: center;">
+					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 title" style="text-align: left;">
 						
 					</div>
 					
@@ -53,6 +54,7 @@
 		<script type="text/javascript" src="js/iscroll.js"></script>
 		
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+		 <script type="text/javascript" src="js/jsons.js"></script>
         <script type="text/javascript" src="js/index.js"></script>                         
         <script type="text/javascript" src="js/utils.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
