--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/calendario.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/calendario.html
@@ -4,14 +4,14 @@
 		
 		<div class="container calendario-menu" >
 			<div class="row" >			
-				 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 calendar active" data-function="_fRenderCalendar();" style="text-align: center; line-height:40px; padding:5px; ">
-				 	<span class="glyphicon glyphicon-calendar"></span>
+				 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 calendar active" data-function="_fRenderCalendar();">
+				 	<span class="icon-calendario"></span>
 				 </div>			
-				 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 calendar" data-function="_fRenderCountry();" style="text-align: center; line-height:40px; padding:5px;">
-				 	<span class="glyphicon glyphicon-globe"></span>
+				 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 calendar" data-function="_fRenderCountry();">
+				 	<span class="icon-paises"></span>
 				 </div>			
-				 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 calendar" data-function="_fRenderPhase();" style="text-align: center; line-height:40px; padding:5px;">
-				 	<span class="glyphicon glyphicon-signal"></span>
+				 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 calendar" data-function="_fRenderPhase();">
+				 	<span class="icon-fases"></span>
 				 </div>		 		 
 			 </div>
 		</div>
@@ -35,12 +35,12 @@
 		
 		
 		<script type="text/javascript">		
-			var myScroll = new IScroll('#wrapper');
+			var myScroll = new IScroll('#wrapper', { click:true });
 			myScroll.on('beforeScrollStart', function () {					
 				this.refresh();	
 			});
 				
-			var myScroll2 = new IScroll('#wrapper2');
+			var myScroll2 = new IScroll('#wrapper2', { click:true });
 			myScroll2.on('beforeScrollStart', function () { 
 				this.refresh();
 			});	
