--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/stadiums.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/stadiums.html
@@ -18,12 +18,12 @@
 		
 
 		<script type="text/javascript">		
-			var myScroll = new IScroll('#wrapper', {tap: true});
+			var myScroll = new IScroll('#wrapper', { click:true });
 			myScroll.on('beforeScrollStart', function (e) {					
 				this.refresh();	
 			});
 			
-			var myScroll2 = new IScroll('#wrapper2');
+			var myScroll2 = new IScroll('#wrapper2', { click:true });
 			myScroll2.on('beforeScrollStart', function (e) { 
 				this.refresh();			
 			});
