--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/goles.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/goles.html
@@ -11,7 +11,7 @@
 		
 		
 		<script type="text/javascript">		
-			var myScroll = new IScroll('#wrapper', { click:true });
+			var myScroll = new IScroll('#wrapper', {click:true,preventDefault:true});
 			myScroll.on('beforeScrollStart', function () { 
 				this.refresh();	
 				});					
