--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/home.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/home.html
@@ -14,7 +14,7 @@
 
 		<script type="text/javascript">
 				
-			var myScroll = new IScroll('#wrapper', { click:true });
+			var myScroll = new IScroll('#wrapper',{click:true,preventDefault:true});
 			myScroll.on('beforeScrollStart', function () { 
 				this.refresh();		
 			});	
