--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/teams.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/teams.html
@@ -19,12 +19,12 @@
 		
 		
 		<script type="text/javascript">		
-			var myScroll = new IScroll('#wrapper', { click:true });
+			var myScroll = new IScroll('#wrapper',{click:true,preventDefault:true});
 			myScroll.on('beforeScrollStart', function (e) { 
 				this.refresh();		
 			});	
 
-			var myScroll2 = new IScroll('#wrapper2', { click:true });
+			var myScroll2 = new IScroll('#wrapper2',{click:true,preventDefault:true});
 			myScroll2.on('beforeScrollStart', function (e) { 
 				this.refresh();			
 			});
