TVMax: Cambios a iOS y mejoras a los WS de calendario

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
@@ -73,7 +73,7 @@
 			var myScrollM = new IScroll('#wrapperM', {click:true,preventDefault:true});			
 			myScrollM.on('beforeScrollStart', function () {				 
 				this.refresh();
-				_tap = true;
+				//_tap = true;
 			});
 		</script>
 
