TVMax: Merge de Android a IOS y mejoras en el touch

--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/resultados.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/resultados.html
@@ -18,7 +18,7 @@
 				});					
 		</script>
 		
-		<script type="text/javascript" src="js/goles.js"></script>  
+		<script type="text/javascript" src="js/resultados.js"></script>  
 
 	</body>
 	
