Actualizaciones varias asociadas a la polla

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
@@ -25,9 +25,14 @@
 						<span class="icon-menuhome"></span>
 					</div>
 					<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 title" style="text-align: center;">						
-					</div>					
+					</div>
+										
 					<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 share hidden" style="text-align: right;">
 						<span class="icon-shareandroid"></span>
+					</div>
+
+					<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 menu-group hidden" style="text-align: right;">
+						<span class="icon-menuhome"></span>
 					</div>
 
 				</div>				 
@@ -36,14 +41,16 @@
 
 		<main>&nbsp;</main>
 
-		<div id="wrapperM" class="page" style="left: -100%;" >
+		<div id="wrapperM" class="page" style="z-index:3; left: -100%;" >
 			<div class="scroller">				
 				<div class="container">
 				</div>	
 			</div>
 		</div>	
 		
-		<footer>&nbsp;</footer>
+		<footer>
+			&nbsp;	
+		</footer>
 
 		<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
