--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
@@ -17,7 +17,7 @@
 	
 	<body class="content-init" style="position: fixed;">
 		<img src="img/splash/splash.png" height="100%" width="100%"/>
-		<header>
+		<header class="hidden">
 			<div class="container">
 				<div class="row">
 														
