--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
@@ -16,7 +16,7 @@
 	</head>
 	
 	<body class="content-init" style="position: fixed;">
-		<img src="img/splash/splash.png" height="100%" width="100%"/>
+		<img id="splash" src="img/splash/splash.png" height="100%" width="100%"/>
 		<header class="hidden">
 			<div class="container">
 				<div class="row">
