--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
@@ -24,7 +24,7 @@
 					<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 menu" style="text-align: left;">
 						<span class="icon-menuhome"></span>
 					</div>
-					<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 title" style="text-align: center;">						
+					<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 title" style="text-align: center; overflow:hidden; white-space:nowrap; text-overflow: ellipsis;">						
 					</div>
 										
 					<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 share hidden" style="text-align: right;">
