--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
@@ -5,7 +5,8 @@
 	
 	<head>	
 		<title>TVMax</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" >	
+		<!--meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" -->
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >	
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">	
