Validaciones varias de la polla, vista de registro e ingreso

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/polla.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/polla.html
@@ -10,7 +10,7 @@
 			</div>
 		</div>
 		
-		<div id="wrapper2" class="page" style="left: 100%;">
+		<div id="wrapper2" class="page" style="z-index:3; left: 100%;">
 			<div class="scroller">							
 				<div class="container" >
 				</div>
