--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/SignIn.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/SignIn.html
@@ -12,7 +12,7 @@
 				    <label class="sr-only" for="exampleInputPassword2">Contrase&ntilde;a</label>
 				    <input type="password" class="form-control" id="password" placeholder="Contrase&ntilde;a">
 				  </div>			
-				  <button type="submit" class="btn btn-default">Sign in</button>
+				  <button type="submit" class="btn btn-default">Ingresar</button>
 			</form>
 		</div>	
 
