--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/SignUp.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/SignUp.html
@@ -32,7 +32,7 @@
 				    <label class="sr-only" for="exampleInputPassword2">Repetir contrase&ntilde;a</label>
 				    <input type="password" class="form-control" id="password2" placeholder="Repetir contrase&ntilde;a">
 				  </div>			
-				  <button type="submit" class="btn btn-default">Sign Up</button>
+				  <button type="submit" class="btn btn-default">Registrar</button>
 			</form>
 		</div>
 		
