Se crean js y rename de html de registro e ingreso

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/SignIn.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/SignIn.html
@@ -14,8 +14,10 @@
 				  </div>			
 				  <button type="submit" class="btn btn-default">Ingresar</button>
 			</form>
-		</div>	
-
+		</div>
+			
+		<script type="text/javascript" src="js/signIn.js"></script>  		
+		
 	</body>
 	
 </html>
