TVMax: client manager rudimentario para pruebas

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
@@ -64,6 +64,7 @@
         <script type="text/javascript" src="js/utils.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
         <script type="text/javascript" src="js/touchEvents.js"></script>
+        <script type="text/javascript" src="js/clientManager.js"></script>
         
         <!-- cordova facebook plugin -->
 		<script src="cdv-plugin-fb-connect.js"></script>
