--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/SignUp.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/SignUp.html
@@ -4,7 +4,7 @@
 
 	
 		<div class="container" >
-			<form class="form" role="form" style="margin-top: 75px;">
+			<form id="form-signUp" class="form" role="form" style="margin-top: 75px;">
 				  <div class="form-group">
 				    <label class="sr-only" for="exampleInputEmail">Email</label>
 				    <input type="email" class="form-control" id="email" placeholder="Email">
@@ -32,7 +32,8 @@
 				    <label class="sr-only" for="exampleInputPassword2">Repetir contrase&ntilde;a</label>
 				    <input type="password" class="form-control" id="password2" placeholder="Repetir contrase&ntilde;a">
 				  </div>			
-				  <button type="submit" class="btn btn-default">Registrar</button>
+				  <button id="signUp" type="button" class="btn btn-default">Registrar</button>
+				  <button id="facebookLoginButton" type="button"  class="btn btn-primary">Facebook</button>
 			</form>
 		</div>
 		
