TVMax: algunos arreglos a las pantallas de login para que se pueda navegar bien entre ellas. Validaciones al momento de entrar en La Polla y Alertas

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/polla.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/polla.html
@@ -21,7 +21,7 @@
 			
 			var myScroll;
 	  		
-			myScroll = new IScroll('#wrapper', {tap: true, preventDefault:true});
+			myScroll = new IScroll('#wrapper', {click: true, preventDefault:true});
 			myScroll.on('beforeScrollStart', function () { 
 				this.refresh();
 				$('.group').removeClass('animated bounceIn');
@@ -32,7 +32,7 @@
 				$('.add, .sub').addClass('hidden');
 			});
 		
-			var myScroll2 = new IScroll('#wrapper2',{tap:true, preventDefault:true});
+			var myScroll2 = new IScroll('#wrapper2',{click:true, preventDefault:true});
 			myScroll2.on('beforeScrollStart', function () { 
 				this.refresh();			
 			});
