--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/home.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/home.html
@@ -13,11 +13,11 @@
 
 
 		<script type="text/javascript">
-				
+			//$("header").removeClass('hidden');
+			$('header .container .row .menu span').addClass('icon-menuhome');
 			var myScroll = new IScroll('#wrapper',{click:true,preventDefault:true});
 			myScroll.on('beforeScrollStart', function () { 
 				this.refresh();	
-				$("header").removeClass('hidden');
 			});	
 			
 		</script>
