--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
@@ -19,12 +19,14 @@
 	<body class="content-init" style="position: fixed;">
 		<img id="splash" src="img/splash/splash.png" height="100%" width="100%"/>
 		
+		<!--header class="hidden"-->
 		<header>
 			<div class="container">
 				<div class="row">
 														
 					<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 menu" style="text-align: left;">
-						<span class="icon-menuhome"></span>
+						<!--span class="icon-menuhome"></span-->
+						<span class="icon-back"></span>
 					</div>
 					<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 title" style="text-align: center; overflow:hidden; white-space:nowrap; text-overflow: ellipsis;">						
 					</div>
