--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/polla.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/polla.html
@@ -10,11 +10,18 @@
 			</div>
 		</div>
 		
+		<div id="wrapper2" class="page" style="z-index:3; left: 100%;">
+			<div class="scroller">							
+				<div class="container" >
+				</div>
+			</div>			
+		</div>
+		
 		<script type="text/javascript">
 			
 			var myScroll;
 	  		
-			myScroll = new IScroll('#wrapper', {click: true,preventDefault:true});
+			myScroll = new IScroll('#wrapper', {click: true, preventDefault:true});
 			myScroll.on('beforeScrollStart', function () { 
 				this.refresh();
 				$('.group').removeClass('animated bounceIn');
@@ -24,6 +31,12 @@
 				$('.goal').removeClass('gol');
 				$('.add, .sub').addClass('hidden');
 			});
+		
+			var myScroll2 = new IScroll('#wrapper2',{click:true, preventDefault:true});
+			myScroll2.on('beforeScrollStart', function () { 
+				this.refresh();			
+			});
+		
 		
   		</script>
   		
