Actualizaciones varias basadas en las correciones de diseño y las nuevas propuestas

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/home.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/home.html
@@ -2,7 +2,7 @@
 <html lang="es">
 	<body>
 	
-		<div id="wrapper">
+		<div id="wrapper" style="padding-right: 2px;">
 			<div class="scroller">				
 				<div class="container" >
 				</div>	
