--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
@@ -26,11 +26,11 @@
 				<div class="row">
 
 					<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 menu" style="text-align: left; height: 50px; line-height: 50px; font-size:2em;">
-						<span class="icon-menuhome" style="margin-left: -25px;"></span>
+						<span class="icon-menuhome" style="margin-left: -20px;"></span>
 					</div>
 										
-					<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 menu" style="text-align: left; height: 50px; line-height: 50px; font-size:3.6em;">						
-						<span class="icon-tvmax" style="margin-left: -50px;"></span>
+					<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left; height: 50px; line-height: 50px; font-size:3.6em;">						
+						<span class="icon-tvmax" style="margin-left: -45px;"></span>
 					</div>
 
 					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 title" style="padding: 0 !important; margin: 0 !important; text-align: left; overflow:hidden; white-space:nowrap; text-overflow: ellipsis;  font-size:1.4em;">						
