--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/default.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/default.html
@@ -3,7 +3,7 @@
 	<body>
 		<div id="wrapper" class="container" style="margin-top: 75px;">
 			<p>
-				<!--button data-index="fb" type="button" class="btn btn-primary btn-lg btn-block load">Entrar con Facebook</button-->
+				<button data-index="fb" type="button" class="btn btn-primary btn-lg btn-block load">Entrar con Facebook</button>
 				<button data-index="16" type="button" class="btn btn-default btn-lg btn-block load">Soy nuevo en TvMax</button>
 				<button data-index="15" type="button" class="btn btn-default btn-lg btn-block load">Soy usuario de TvMax</button>			
 				<button data-index="0" id="free" type="button" class="btn btn-default btn-lg btn-block load">Entrar sin registrarme</button>
