--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/calendario.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/calendario.html
@@ -5,26 +5,26 @@
 		<div class="container calendario-menu" >
 			<div class="row" >			
 				 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 calendar active" data-function="_fRenderCalendar();">
-				 	<div style=" position: relative; height:50px; text-align: center;" >
-				 		<span class="icon-calendario" style="font-size: 3.2em; "></span>
+				 	<div style=" position: relative; height:40px; line-height:40px; text-align: center; margin-top: 5px;" >
+				 		<span class="icon-calendario" style="font-size: 2.5em; "></span>
 				 	</div>				 	
-				 	<div style="height:20px; line-height:10px; text-align: center;" >
+				 	<div style="height:20px; line-height:20px; text-align: center; " >
 				 		<span style="font-size: 1em; ">Fechas</span>
 				 	</div>				 					 					 					 					 	
 				 </div>			
 				 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 calendar" style="" data-function="_fRenderCountry();">
-				 	<div style=" position: relative;height:50px; text-align: center;" >
-				 		<span class="icon-paises" style="font-size: 3.2em; "></span>
+				 	<div style=" position: relative;height:40px; line-height:40px; text-align: center; margin-top: 5px;" >
+				 		<span class="icon-paises" style="font-size: 2.5em; "></span>
 				 	</div>				 	
-				 	<div style="height:20px; line-height:10px; text-align: center;" >
+				 	<div style="height:20px; line-height:20px; text-align: center;" >
 				 		<span style="font-size: 1em; ">Pa&iacute;ses</span>
 				 	</div>	
 				 </div>			
 				 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 calendar" data-function="_fRenderPhase();">
-				 	<div style=" position: relative; height:50px; text-align: center;" >
-				 		<span class="icon-fases" style="font-size: 3.2em; "></span>
+				 	<div style=" position: relative; height:40px; line-height:40px; text-align: center; margin-top: 5px;" >
+				 		<span class="icon-fases" style="font-size: 2.5em; "></span>
 				 	</div>				 	
-				 	<div style="height:20px; line-height:10px; text-align: center;" >
+				 	<div style="height:20px; line-height:20px; text-align: center;" >
 				 		<span style="font-size: 1em; ">Fases</span>
 				 	</div>	
 				 </div>		 		 
