--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/default.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">	
 	<body>
-		<div id="wrapper" class="container" style="margin-top: 75px;">
+		<div id="wrapper" class="container" style="background-color: rgba(255,255,255,0.5); margin-top: 75px;">
 			<p>
 				<button data-index="fb" type="button" class="btn btn-primary btn-lg btn-block load">Entrar con Facebook</button>
 				<button data-index="16" type="button" class="btn btn-default btn-lg btn-block load">Soy nuevo en TvMax</button>
@@ -9,6 +9,7 @@
 				<button data-index="0" id="free" type="button" class="btn btn-default btn-lg btn-block load">Entrar sin registrarme</button>
 			</p>
 		</div>
+		<script type="text/javascript" src="js/default.js"></script>  
 	</body>
 	
 </html>
