Actualizaciones varias en el init de la app

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
@@ -17,8 +17,11 @@
 	</head>
 	
 	<body class="content-init" style="position: fixed;">
-		<img id="splash" src="img/splash/splash.png" height="100%" width="100%"/>
-				
+		<img id="splash"  src="img/splash/splash.png" height="100%" width="100%"/>
+		<div id="mloading" style="position: absolute; top:50%; width: 100%;  text-align: center; font-size: 1.4em; color: #3E79C4; z-index: 10;">
+			<span>- Cargando -</span>
+		</div>
+
 		<header>
 
 			<div class="container">
