TVMax: Arreglos al push para que vaya directo a una noticia y se registre al cliente en la categoria correcta (faltan pruebas el lunes en oficina)

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
@@ -85,6 +85,7 @@
         <script type="text/javascript" src="js/touchEvents.js"></script>
         <script type="text/javascript" src="js/clientManager.js"></script>
         <script type="text/javascript" src="js/Push/PushManager.js"></script>
+        <script type="text/javascript" src="js/Push/pushCategoriesManager.js"></script>
         
         <!-- cordova facebook plugin -->
 		<!--script src="plugins/org.apache.cordova.facebook.Connect/www/cdv-plugin-fb-connect.js"></script-->
