TVMax: Mejoras al render del login y mejoras al push para que abra la noticia si existe (Android)

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/default.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/default.html
@@ -2,7 +2,7 @@
 <html lang="es">	
 	<body>
 
-		<div id="wrapper" style="background-color: rgba(255,255,255,0); margin-top: 30%;">
+		<div id="wrapper" style="background-color: rgba(255,255,255,0); top: 40%;">
 			<div class="scroller" style="background-color: rgba(255,255,255,0);" >				
 				<div class="container" style="background-color: rgba(255,255,255,0);">					
 					<p style="background-color: rgba(255,255,255,0);">
