--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/mam.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/mam.html
@@ -2,20 +2,41 @@
 <html lang="es">	
 	<body>
 
-	
-		<div id="wrapper">
+
+		<div id="wrapper" >
 			<div class="scroller">				
 				<div class="container" >
 				</div>	
 			</div>
 		</div>	
+ 
+
+		<div id="wrapperMaM" class="page" style="left: 100%;">
 		
+			<div class="container header" style="position: absolute; z-index: 3; background: #ffffff;" >
+			</div>	
 		
+			<div id="wrapperMaM2">
+				<div class="scroller">							
+					<div class="container" >
+					</div>
+				</div>						
+			</div>
+		
+		</div>
+
+		
+
 		<script type="text/javascript">		
-			var myScroll = new IScroll('#wrapper', {click:true,preventDefault:true});
-			myScroll.on('beforeScrollStart', function () { 
+			var myScroll = new IScroll('#wrapper',{click:true,preventDefault:true});
+			myScroll.on('beforeScrollStart', function (e) {					
 				this.refresh();	
-				});					
+			});
+			
+			var myScroll2 = new IScroll('#wrapperMaM2',{click:true,preventDefault:true});
+			myScroll2.on('beforeScrollStart', function (e) { 
+				this.refresh();			
+			});
 		</script>
 		
 		<script type="text/javascript" src="js/mam.js"></script>  
