Actualizaciones varias asociadas a clasificacion, goles...

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
@@ -54,7 +54,7 @@
 						</div>
 					
 						<div style="display:inline; float: right; height: 50px; font-size:2em;" class="refresh hidden">
-							<span class="icon-minutoaminuto"></span>	
+							<span class="icon-refrescar"></span>	
 						</div>
 					
 					</div>
