--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
@@ -34,7 +34,7 @@
 						</div>
 						
 						<div style="display:inline; float: left; width:64px; height: 50px; line-height: 50px; " class="logo">						
-							<img src="img/logo_green.png" style="width:64px; height: 45px; margin-bottom: 5px;"> 	
+							<img src="img/logo_green_mil.png" style="width:62px; height: 45px; margin-bottom: 5px;"> 	
 						</div>
 						
 						<div style="display:inline; float: left;  height: 50px; margin-left: 15px; text-align: left; overflow:hidden; white-space:nowrap; text-overflow: ellipsis; font-size:1.4em;" class="title">
