TVMax: agregado plugin de google analytics. Mejoras generales, mejoras al MaM, nueva pantalla de leaderboards (aun falta un poco de desarrollo por facebook)

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/alertas.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/alertas.html
@@ -29,7 +29,8 @@
 			myScroll2.on('beforeScrollStart', function () { 
 				this.refresh();			
 			});				
-								
+				
+			gaPlugin.trackPage(successGAHandler, errorGAHandler, "Alertas");
 		</script>
 		
 		<script type="text/javascript" src="js/alertas.js"></script>  
