--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/calendario.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/calendario.html
@@ -59,6 +59,7 @@
 			myScroll2.on('beforeScrollStart', function () { 
 				this.refresh();
 			});	
+			gaPlugin.trackPage(successGAHandler, errorGAHandler, "Calendario");
 		</script>
 		
 		<script type="text/javascript" src="js/calendario.js"></script>  
