--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/default.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/default.html
@@ -19,7 +19,8 @@
 			var myScroll = new IScroll('#wrapper',{click:true,preventDefault:true});
 			myScroll.on('beforeScrollStart', function () { 
 				this.refresh();	
-			});				
+			});	
+			gaPlugin.trackPage(successGAHandler, errorGAHandler, "LoginInicial");
 		</script>
 		
 		
