--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/goles.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/goles.html
@@ -15,6 +15,7 @@
 			myScroll.on('beforeScrollStart', function (e) {					
 				this.refresh();	
 			});
+			gaPlugin.trackPage(successGAHandler, errorGAHandler, "Goles");
 		</script>
 		
 		<script type="text/javascript" src="js/goles.js"></script>  
