--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
@@ -91,6 +91,8 @@
         <script type="text/javascript" src="js/Push/PushManager.js"></script>
         <script type="text/javascript" src="js/Push/pushCategoriesManager.js"></script>
         
+        <script type="text/javascript" src="js/GAManager/GAManager.js"></script>
+        
         <!-- cordova facebook plugin -->
 		<!--script src="plugins/org.apache.cordova.facebook.Connect/www/cdv-plugin-fb-connect.js"></script-->
 		<script src="cdv-plugin-fb-connect.js"></script>
