--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/goles.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/goles.html
@@ -2,24 +2,68 @@
 <html lang="es">
 	<body>
 		
-		<div id="wrapper">
+		<div class="container calendario-menu" >
+			<div class="row" >			
+				 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 calendar active" data-function="_fRenderCalendar();">
+				 	<div style=" position: relative; height:40px; line-height:40px; text-align: center; margin-top: 5px;" >
+				 		<span class="icon-calendario" style="font-size: 2.5em; "></span>
+				 	</div>				 	
+				 	<div style="height:20px; line-height:20px; text-align: center; " >
+				 		<span style="font-size: 1em; ">Fechas</span>
+				 	</div>				 					 					 					 					 	
+				 </div>			
+				 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 calendar" style="" data-function="_fRenderCountry();">
+				 	<div style=" position: relative;height:40px; line-height:40px; text-align: center; margin-top: 5px;" >
+				 		<span class="icon-paises" style="font-size: 2.5em; "></span>
+				 	</div>				 	
+				 	<div style="height:20px; line-height:20px; text-align: center;" >
+				 		<span style="font-size: 1em; ">Pa&iacute;ses</span>
+				 	</div>	
+				 </div>			
+				 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 calendar" data-function="_fRenderPhase();">
+				 	<div style=" position: relative; height:40px; line-height:40px; text-align: center; margin-top: 5px;" >
+				 		<span class="icon-fases" style="font-size: 2.5em; "></span>
+				 	</div>				 	
+				 	<div style="height:20px; line-height:20px; text-align: center;" >
+				 		<span style="font-size: 1em; ">Fases</span>
+				 	</div>	
+				 </div>		 		 
+			 </div>
+		</div>
+		
+
+
+		<div id="wrapper" >
 			<div class="scroller">				
 				<div class="container" >
 				</div>	
 			</div>
 		</div>	
 
+
+		<div id="wrapper2" class="page" style="left: 100%; ">
+			<div class="scroller">							
+				<div class="container" >
+				</div>
+			</div>			
+		</div>
 		
-		<script type="text/javascript">				
+		
+		<script type="text/javascript">		
 			var myScroll = new IScroll('#wrapper',{click:true,preventDefault:true});
-			myScroll.on('beforeScrollStart', function (e) {					
+			myScroll.on('beforeScrollStart', function () {					
 				this.refresh();	
 			});
+	
+			var myScroll2 = new IScroll('#wrapper2',{click:true,preventDefault:true});
+			myScroll2.on('beforeScrollStart', function () { 
+				this.refresh();
+			});	
 			gaPlugin.trackPage(successGAHandler, errorGAHandler, "Goles");
 		</script>
 		
 		<script type="text/javascript" src="js/goles.js"></script>  
 
-	</body>	
+	</body>
+	
 </html>
-
