TVMax: mejoras a los leaderboards

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/leaderboards.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/leaderboards.html
@@ -4,7 +4,7 @@
 
 		<div class="container leaderboard-menu" >
 			<div class="row" >			
-				 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 leaderboard active" data-function="_fRenderGlobalLeaderboard();">
+				 <div id="leaderboard_global_menu" class="col-xs-6 col-sm-6 col-md-6 col-lg-6 leaderboard active" data-function="_fRenderGlobalLeaderboard();">
 				 	<div style=" position: relative; height:40px; line-height:40px; text-align: center; margin-top: 5px;" >
 				 		<span class="icon-fases" style="font-size: 2.5em; "></span>
 				 	</div>				 	
@@ -13,7 +13,7 @@
 				 	</div>				 					 					 					 					 	
 				 </div>			
 		
-				 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 leaderboard" data-function="loadAndShowFriends();">
+				 <div id="leaderboard_social_menu"  class="col-xs-6 col-sm-6 col-md-6 col-lg-6 leaderboard" data-function="loadAndShowFriends();">
 				 	<div style=" position: relative; height:40px; line-height:40px; text-align: center; margin-top: 5px;" >
 				 		<span class="icon-biografia_menu" style="font-size: 2.5em; "></span>
 				 	</div>				 	
