--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/alertas.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/alertas.html
@@ -29,7 +29,8 @@
 			myScroll2.on('beforeScrollStart', function () { 
 				this.refresh();			
 			});				
-								
+				
+			gaPlugin.trackPage(successGAHandler, errorGAHandler, "Alertas");
 		</script>
 		
 		<script type="text/javascript" src="js/alertas.js"></script>  
