--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/history.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/history.html
@@ -27,6 +27,7 @@
 			myScroll2.on('beforeScrollStart', function (e) { 
 				this.refresh();			
 			});
+			gaPlugin.trackPage(successGAHandler, errorGAHandler, "Historia");
 		</script>
 		
 		<script type="text/javascript" src="js/history.js"></script>  		 
