--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/home.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/home.html
@@ -16,7 +16,7 @@
 			myScroll.on('beforeScrollStart', function () { 
 				this.refresh();	
 			});	
-			
+			gaPlugin.trackPage(successGAHandler, errorGAHandler, "Home");
 		</script>
 
 		<script type="text/javascript" src="js/home.js"></script>  
