--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/mam.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/mam.html
@@ -37,6 +37,7 @@
 			myScroll2.on('beforeScrollStart', function (e) { 
 				this.refresh();			
 			});
+			gaPlugin.trackPage(successGAHandler, errorGAHandler, "MinutoAMinuto");
 		</script>
 		
 		<script type="text/javascript" src="js/mam.js"></script>  
