--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/noticias.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/noticias.html
@@ -28,6 +28,7 @@
 			myScroll2.on('beforeScrollStart', function () { 
 				this.refresh();			
 			});
+			gaPlugin.trackPage(successGAHandler, errorGAHandler, "Noticias");
 		</script>
 		
 		<script type="text/javascript" src="js/noticias.js"></script>  
