--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/players.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/players.html
@@ -26,6 +26,7 @@
 			myScroll2.on('beforeScrollStart', function (e) { 
 				this.refresh();			
 			});
+			gaPlugin.trackPage(successGAHandler, errorGAHandler, "Leyendas");
 		</script>
 		
 		<script type="text/javascript" src="js/players.js"></script>  		 
