--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/polemicas.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/polemicas.html
@@ -14,6 +14,7 @@
 			myScroll.on('beforeScrollStart', function () { 
 				this.refresh();	
 			});	
+			gaPlugin.trackPage(successGAHandler, errorGAHandler, "Polemicas");
 		</script>
 		
 		<script type="text/javascript" src="js/polemicas.js"></script>  
