--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/polla.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/polla.html
@@ -37,7 +37,7 @@
 				this.refresh();			
 			});
 		
-		
+			gaPlugin.trackPage(successGAHandler, errorGAHandler, "Polla");
   		</script>
   		
 		<script type="text/javascript" src="js/polla.js"></script>
