--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/pronosticos.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/pronosticos.html
@@ -15,6 +15,7 @@
 			myScroll.on('beforeScrollStart', function (e) {					
 				this.refresh();	
 			});
+			gaPlugin.trackPage(successGAHandler, errorGAHandler, "Pronosticos");
 		</script>
 		
 		<script type="text/javascript" src="js/pronosticos.js"></script>  
