--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/resultados.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/resultados.html
@@ -34,6 +34,7 @@
 			myScroll2.on('beforeScrollStart', function (e) { 
 				this.refresh();			
 			});
+			gaPlugin.trackPage(successGAHandler, errorGAHandler, "Resultados");
 		</script>
 		
 		<script type="text/javascript" src="js/resultados.js"></script>  
