--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/stadiums.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/stadiums.html
@@ -27,6 +27,7 @@
 			myScroll2.on('beforeScrollStart', function (e) { 
 				this.refresh();			
 			});
+			gaPlugin.trackPage(successGAHandler, errorGAHandler, "Estadios");
 		</script>
 
 		<script type="text/javascript" src="js/stadiums.js"></script>  		 
