--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/teams.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/teams.html
@@ -28,6 +28,7 @@
 			myScroll2.on('beforeScrollStart', function (e) { 
 				this.refresh();			
 			});
+			gaPlugin.trackPage(successGAHandler, errorGAHandler, "Equipos");
 		</script>
 		
 		<script type="text/javascript" src="js/teams.js"></script>  
