Se actualiza la vista de clasificacion

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/clasificacion.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/clasificacion.html
@@ -19,7 +19,7 @@
 			gaPlugin.trackPage(successGAHandler, errorGAHandler, "Clasificacion");
 		</script>
 		
-		<script type="text/javascript" src="js/clasificacion.js"></script>  
+		<script type="text/javascript" src="js/clasificacionv2.js"></script>  
 
 	</body>
 	
