Implementaciones varias de noticas y categorias

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/home.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/home.html
@@ -19,7 +19,7 @@
 			gaPlugin.trackPage(successGAHandler, errorGAHandler, "Home");
 		</script>
 
-		<script type="text/javascript" src="js/home.js"></script>  
+		<script type="text/javascript" src="js/homeV2.js"></script>  
 
 	</body>
 	
