--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
@@ -83,7 +83,7 @@
 		
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		 <script type="text/javascript" src="js/jsons.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>                         
+        <script type="text/javascript" src="js/indexV2.js"></script>                         
         <script type="text/javascript" src="js/utils.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
         <script type="text/javascript" src="js/touchEvents.js"></script>
