Actualizaciones varias en el control de consumo e impresion de noticias

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/SignUp.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/SignUp.html
@@ -36,7 +36,7 @@
 						  
 						<div class="form-group" >
 							<label class="sr-only" for="exampleInputPassword">Contrase&ntilde;a</label>
-							<input type="text" class="form-control" id="password" placeholder="Contrase&ntilde;a" >
+							<input type="password" class="form-control" id="password" placeholder="Contrase&ntilde;a" >
 						</div>
 
 						<button id="signUp" type="button" class="btn btn-default" >Registrar</button>
