Validacion de acceso a registro y login de usuario desde sus formularios

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/SignIn.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/SignIn.html
@@ -8,7 +8,7 @@
 								
 				<div class="col-md-12" style="text-align: center; margin-top: 75px;"  >
 					<button data-index="fb" type="button" class="btn btn-primary btn-lg btn-block load">Entrar con Facebook</button>
-					<button data-index="16" type="button" class="btn btn-default btn-lg btn-block load">Soy nuevo en TvMax</button>					
+					<button data-index="signup" type="button" class="btn btn-default btn-lg btn-block load">Soy nuevo en TvMax</button>					
 				</div>
 	
 				<div class="col-md-12" style="text-align: center; margin: 5px;"  >	
