--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/SignUp.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/SignUp.html
@@ -8,7 +8,7 @@
 
 				<div class="col-md-12" style="text-align: center; margin-top: 75px;"  >
 					<button data-index="fb" type="button" class="btn btn-primary btn-lg btn-block load">Entrar con Facebook</button>
-					<button data-index="15" type="button" class="btn btn-default btn-lg btn-block load">Soy usuario de TvMax</button>						
+					<button data-index="signin" type="button" class="btn btn-default btn-lg btn-block load">Soy usuario de TvMax</button>						
 				</div>
 
 				<div class="col-md-12" style="text-align: center; margin: 5px;"  >	
