TVMax: merge del codigo hasta ahora de android a iOS

--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/SignUp.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/SignUp.html
@@ -8,7 +8,7 @@
 
 				<div class="col-md-12" style="text-align: center; margin-top: 75px;"  >
 					<button data-index="fb" type="button" class="btn btn-primary btn-lg btn-block load">Entrar con Facebook</button>
-					<button data-index="15" type="button" class="btn btn-default btn-lg btn-block load">Soy usuario de TvMax</button>						
+					<button data-index="signin" type="button" class="btn btn-default btn-lg btn-block load">Soy usuario de TvMax</button>						
 				</div>
 
 				<div class="col-md-12" style="text-align: center; margin: 5px;"  >	
@@ -36,7 +36,7 @@
 						  
 						<div class="form-group" >
 							<label class="sr-only" for="exampleInputPassword">Contrase&ntilde;a</label>
-							<input type="text" class="form-control" id="password" placeholder="Contrase&ntilde;a" >
+							<input type="password" class="form-control" id="password" placeholder="Contrase&ntilde;a" >
 						</div>
 
 						<button id="signUp" type="button" class="btn btn-default" >Registrar</button>
