--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/default.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/default.html
@@ -54,8 +54,8 @@
 				<div class="container" style="background-color: rgba(255,255,255,0);">					
 					<p style="background-color: rgba(255,255,255,0);">
 						<button data-index="fb" type="button" class="btn btn-primary btn-lg btn-block load">Entrar con Facebook</button>
-						<button data-index="16" type="button" class="btn btn-default btn-lg btn-block load">Soy nuevo en TvMax</button>
-						<button data-index="15" type="button" class="btn btn-default btn-lg btn-block load">Soy usuario de TvMax</button>			
+						<button data-index="signup" type="button" class="btn btn-default btn-lg btn-block load">Soy nuevo en TvMax</button>
+						<button data-index="signin" type="button" class="btn btn-default btn-lg btn-block load">Soy usuario de TvMax</button>			
 						<button data-index="0" id="free" type="button" class="btn btn-default btn-lg btn-block load">Entrar sin registrarme</button>
 					</p>			
 				</div>	
