--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/alertasV2.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/alertasV2.html
@@ -9,17 +9,18 @@
 				</div>	
 			</div>
 		</div>	
-		
-		
-		<script type="text/javascript">		
+
+		<script type="text/javascript">
+
 			var myScroll = new IScroll('#wrapper', {click:true,preventDefault:true});
 			myScroll.on('beforeScrollStart', function () { 
 				this.refresh();	
-				});	
-			gaPlugin.trackPage(successGAHandler, errorGAHandler, "Clasificacion");
+			});			
+				
+			gaPlugin.trackPage(successGAHandler, errorGAHandler, "Alertas");
 		</script>
 		
-		<script type="text/javascript" src="js/clasificacionv2.js"></script>  
+		<script type="text/javascript" src="js/alertasV2.js"></script>  
 
 	</body>
 	
