--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/index.html
@@ -83,13 +83,13 @@
 		
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		 <script type="text/javascript" src="js/jsons.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>                         
+        <script type="text/javascript" src="js/indexV2.js"></script>                         
         <script type="text/javascript" src="js/utils.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
         <script type="text/javascript" src="js/touchEvents.js"></script>
         <script type="text/javascript" src="js/clientManager.js"></script>
         <script type="text/javascript" src="js/Push/PushManager.js"></script>
-        <script type="text/javascript" src="js/Push/pushCategoriesManager.js"></script>
+        <script type="text/javascript" src="js/Push/pushCategoriesManagerV2.js"></script>
         
         <script type="text/javascript" src="js/GAManager/GAManager.js"></script>
         
