--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/noticias.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/noticias.html
@@ -31,7 +31,7 @@
 			gaPlugin.trackPage(successGAHandler, errorGAHandler, "Noticias");
 		</script>
 		
-		<script type="text/javascript" src="js/noticias.js"></script>  
+		<script type="text/javascript" src="js/noticiasV2.js"></script>  
 
 	</body>
 	
