Implementacion de scroll horizontal en el home

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
@@ -80,7 +80,7 @@
 		<script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>		
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/SocialSharing.js"></script>
-		<script type="text/javascript" src="js/iscroll.js"></script>
+		<script type="text/javascript" src="js/iscroll-probe.js"></script>
 		
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		 <script type="text/javascript" src="js/jsons.js"></script>
